--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ html {
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -40,7 +40,7 @@ ol {
 }
 
 .title {
-  color: #FFF;
+  color: #fff;
   font-family: Oswald, sans-serif;
   font-size: 75px;
   font-style: normal;
@@ -49,67 +49,71 @@ ol {
   text-transform: uppercase;
 }
 
+::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+}
 
 .result {
   display: flex;
-flex-direction: column;
-align-items: flex-start;
-gap: 16px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
 }
 
 .result__video-container {
   position: relative;
   width: 711px;
-height: 386px;
+  height: 386px;
 }
 
 .result__video {
-width: inherit;
-height: inherit;
-object-fit: cover;
+  width: inherit;
+  height: inherit;
+  object-position: center;
+  object-fit: cover;
 }
 
 .search-form {
   display: flex;
-  gap: 40px;
+  gap: 42px;
 }
 
 .search-form__fieldset {
   display: flex;
-flex-direction: column;
-align-items: flex-start;
-gap: 5px;
-border: none;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 5px;
+  border: none;
 }
 
 .search-form__fieldset-title {
-  color: #FFF;
-font-family: Fira Sans Condensed;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+  color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .search-form__label {
   display: flex;
-align-items: center;
-gap: 5px;
+  align-items: center;
+  gap: 5px;
+  cursor: pointer;
+}
+
+.search-form__label:hover .search-form__label-text {
+  text-decoration: underline;
 }
 
 .search-form__label:has(:focus-visible) {
-outline: 1px solid #fff;
-outline-offset: 2px;
-}
-
-.search-form__label-text {
-
+  outline: 1px solid #fff;
+  outline-offset: 2px;
 }
 
 .search-form__textfield {
-  color: rgba(255, 255, 255, 0.70);
-
-  font-family: Fira Sans Condensed;
+  color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -121,29 +125,37 @@ outline-offset: 2px;
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
   outline: none;
+  appearance: none;
 }
 
 .search-form__checkbox-list {
-display: flex;
-gap: 5px;
+  display: flex;
+  gap: 15px;
 }
 
 .search-form__pseudo-checkbox {
   width: 19px;
-height: 19px;
-border: 1px solid #FFF;
-display: flex;
-align-items: center;
-justify-content: center;
- }
+  height: 19px;
+  border: 1px solid #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: "";
+  display: block;
+  width: 16px;
+  height: 16px;
+  background-color: #fff;
+}
 
- .search-form__submit-button {
- width: 194px;
- align-self: flex-end;
- }
+.search-form__submit-button {
+  width: 194px;
+  align-self: flex-end;
+}
 
- .visually-hidden {
+.visually-hidden {
   position: absolute;
   inline-size: 1px;
   block-size: 1px;
@@ -151,33 +163,41 @@ justify-content: center;
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   white-space: nowrap;
-} 
+}
 
- .button {
-  color: #FFF;
-border: 1px solid #fff;
-text-align: center;
-font-family: Fira Sans Condensed;
-font-size: 18px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-background: none;
+.button {
+  color: #fff;
+  border: 1px solid currentColor;
+  text-align: center;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  background: none;
+  cursor: pointer;
+  padding: 5px 0;
 }
 
 .button:focus {
   outline: none;
 }
 
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
+
 .button:active {
   background: #545050;
 }
- button:hover {
+
+button:hover {
   text-decoration: underline;
 }
 
 .more-button {
-width: 100%;
+  width: 100%;
 }
 
 .content {
@@ -192,16 +212,13 @@ width: 100%;
   flex-direction: column;
   align-items: flex-start;
   justify-content: start;
-  gap: 26px;
+  gap: 21px;
   width: 399px;
-  
 }
-
 
 .content__accent {
-  color:#545050;
+  color: #545050;
 }
-
 
 .content__list {
   display: flex;
@@ -217,7 +234,6 @@ width: 100%;
   display: flex;
 }
 
-
 .content__video-card-description-container {
   display: flex;
   flex-direction: column;
@@ -227,32 +243,65 @@ width: 100%;
 }
 
 .content__video-card-title {
-color: #FFF;
-font-family: Oswald;
-font-size: 30px;
-font-style: normal;
-font-weight: 700;
-line-height: 100%;
-text-transform: uppercase;
+  color: #fff;
+  font-family: Oswald, sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 200px;
 }
 
 .content__video-card-description {
-  color: #FFF;
-font-family: Fira Sans Condensed;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 90%; 
+  color: #fff;
+  font-family: "Fira Sans Condensed", sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 90%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 200px;
 }
 
 .content__video-card-thumbnail {
   width: 194px;
-height: 103px;
-margin-left: auto;
+  height: 103px;
+  margin-left: auto;
+  -o-object-fit: cover;
+  object-fit: cover;
+  -o-object-position: 50% 50%;
+  object-position: 50% 50%;
 }
 
 .content__card-link {
   text-decoration: none;
   display: block;
-  object-position: 50% 50%;
+  color: #fff;
+}
+
+.content__card-link:active {
+  background: #545050;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+}
+
+.content__card-link_current {
+  background: #545050;
+}
+
+.content__card-link:hover .content__video-card-title,
+.content__card-link:hover .content__video-card-description {
+  text-decoration: underline;
 }
